# TimeWarpForecast

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: pull_request_workflow.yml
configuration/: flu_trends_config.yaml  linear_regression_config.yaml  store_sales_config.toml  test_config.yaml
data/raw/: flu_trends.csv  test_data.csv  us_population.csv
data/test/: test_boosted_hybrid_model_data.csv  test_data.csv
docs/: statistics.md  time_series_forecasting.md
notebooks/code_utils/: pandas_code_utils.ipynb  statsmodels_code_utils.ipynb
notebooks/deep_learning/: keras_rnn_experimentation.ipynb
notebooks/flu_trends/: 1_exploratory_data_analysis.ipynb  exploratory_data_analysis.ipynb
notebooks/hybrid_models/: us_retrail_sales.ipynb
notebooks/linear_regression/: kaggle_tunnel_data.ipynb
notebooks/store_sales/: store_sales_eda.ipynb  store_sales_model_training.ipynb
scripts/: pylint_lint.sh  sqlfluff_lint_and_fix.sh
src/data_preparation/: data_preparation_utils.py
src/exploratory_data_analysis/: exploratory_data_analysis_utils.py
src/general_utils/: general_utils.py
src/logging_module/: log_configuration.yaml  logging_module.py
src/model_training/: model_training.py
tests/: conftest.py  test_data_preparation.py  test_general_utils.py  test_logging_module.py  test_model_training.py
