[tool.poetry]
name = "TimeWarpForecast"
version = "0.1.0"
description = "Exploring the temporal realm: dive into the depths of time series forecasting with this repository."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]