[tool.poetry]
name = "TimeWarpForecast"
version = "0.1.4"
description = "Exploring the temporal realm: dive into the depths of time series forecasting with this repository."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint-pytest = "^1.1.8"
pyyaml = "^6.0.2"
pylint = "^3.2.7"
pytest = "8.2.0"
pandas = "^2.2.2"
jupyterlab = "^4.2.5"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
xgboost = "^2.1.1"
pmdarima = "^2.0.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]